--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "framer-motion": "^6",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-currency-format": "^1.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "17.0.38",
     "@types/react": "18.0.10",
+    "@types/react-currency-format": "^1.0.0",
     "@types/react-dom": "18.0.5",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
